[package]
name = "limage"
version = "0.5.1"
edition = "2021"
authors = ["Phillip Groves <phillip.t.groves@gmail.com>"]
description = "A Cargo utility for running/testing Rust-based kernels using the Limine bootloader"
license = "MIT"
repository = "https://github.com/phillipg14/limage"

[dependencies]
anyhow = "1.0.28"
cargo_metadata = "0.9.1"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
git2 = "0.20.2"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0.16"
toml = "0.5.6"
wait-timeout = "0.2.0"
