[package]
name = "limage"
version = "0.6.0"
edition = "2024"
authors = ["Christophe Bronner <christophe.bronner.swift@gmail.com>"]
description = "A Cargo utility for running/testing Rust-based kernels using the Limine bootloader"
license = "MIT"
repository = "https://github.com/Lancelotbronner/limage"

[dependencies]
anyhow = "1.0.102"
ovmf-prebuilt = "0.2.8"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
git2 = "0.20.4"
thiserror = "2.0.18"
toml = "1.1.2"
wait-timeout = "0.2.1"
log = "0.4.29"
